WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20749
[Qt] Canvas stroke don't work for gradients and patterns
https://bugs.webkit.org/show_bug.cgi?id=20749
Summary
[Qt] Canvas stroke don't work for gradients and patterns
Dirk Schulze
Reported
2008-09-09 08:52:17 PDT
Canvas stroke() and strokeRect() don't work for gradients and patterns.
Attachments
Qt Canvas stroke
(2.41 KB, patch)
2008-09-09 09:00 PDT
,
Dirk Schulze
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2008-09-09 09:00:03 PDT
Created
attachment 23298
[details]
Qt Canvas stroke fixed canvas stroke
Simon Hausmann
Comment 2
2008-09-10 12:47:55 PDT
Comment on
attachment 23298
[details]
Qt Canvas stroke Good catch! :)
Simon Hausmann
Comment 3
2008-09-11 01:03:14 PDT
Landed in
r36331
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug