2008-09-11  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Simon.

        Fixed stroke() and strokeRect() to support gradients
        and patterns on Qt.

        [Qt] Canvas stroke don't work for gradients and patterns
        [https://bugs.webkit.org/show_bug.cgi?id=20749]

Canonical link: https://commits.webkit.org/28623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36331 268f45cc-cd09-0410-ab3c-d52691b4dbfc